FIX: fixed white space between images, now all images have the same size

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,29 +50,18 @@ header {
 }
 
 /* ============================= */
-/* Hero Section */
+/* Banner section */
 /* ============================= */
 
-.hero-section {
+.banner-section {
   position: relative;
   width: 100%;
-  height: 75vh;
 }
 
-.background-image {
+.banner-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
-
-.overlay-image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 150px;
-  height: auto;
-  z-index: 1;
+  object-fit: fill;
 }
 
 /* ============================= */
@@ -124,19 +113,12 @@ header {
 .logo-section {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 75vh;
-}
-
-.logo-image-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .logo-image {
-  height: 75vh;
-  object-fit: cover;
+  height: 50vh;
+  width: 120vh;
+  object-fit: contain;
 }
 
 /* ============================= */
@@ -368,7 +350,7 @@ header {
   margin-bottom: 20px;
 }
 
-.guidelines-background-image {
+.guidelines-banner-image  {
   width: 100%;
   height: 100%;
   object-fit: cover;
